--- a/views/index.html
+++ b/views/index.html
@@ -35,11 +35,8 @@
                         <a class="nav-link mx-lg-5 p-md-4 mx-sm-3" href="/Kontakt">Kontakta oss</a>
                     </li>
                     <li class="nav-item">
-                        {% if logged_in_user %}
-                        <a class="nav-link mx-lg-5 p-md-4 mx-sm-3" href="/Logga_ut">Logga ut</a>
-                        {% else %}
-                            <a class="nav-link mx-lg-5 p-md-4 mx-sm-3" href="/Logga_in">Logga in</a>
-                        {% endif %}
+                        <a class="nav-link mx-lg-5 p-md-4 mx-sm-3" href="/Logga_in">Logga in/
+                            <br>Registrera dig</a>
                     </li>
                 </ul>
             </div>
