--- a/views/publish_post.html
+++ b/views/publish_post.html
@@ -96,7 +96,7 @@
                             <label for="ZIP-code" class="form-label ms-4 mt-2 h4">
                                 Postnummer<span class="text-danger">*</span>
                             </label>
-                            <input class="form-control ms-4" list="zipOptions" id="ZIP-code" name="ZIP-code"
+                            <input class="form-control ms-4" list="zipOptions" id="ZIP" name="ZIP"
                                 placeholder="Sök..." value={{zip_code}}>
                             <datalist id="zipOptions">
                                 <option value="21110">
