--- a/views/publish_post.html
+++ b/views/publish_post.html
@@ -79,9 +79,8 @@
                     </div>
                     <div class="row">
                         <div class="col-10 col-sm-9 col-md-5 p-2">
-                            <label for="city" class="form-label">
-                                <h3 class="ms-4 mt-2">Stad<span class="text-danger">*</span>
-                            </label></h3>
+                            <label for="city" class="form-label ms-4 mt-2 h4">
+                                Stad<span class="text-danger">*</span>
                             </label>
                             <input class="form-control ms-4" list="cityOptions" id="city" name="city"
                                 placeholder="Sök..." value={{city}}>
@@ -96,8 +95,8 @@
                             <label for="ZIP-code" class="form-label ms-4 mt-2 h4">
                                 Postnummer<span class="text-danger">*</span>
                             </label>
-                            <input class="form-control ms-4" list="zipOptions" id="ZIP" name="ZIP"
-                                placeholder="Sök..." value={{zip_code}}>
+                            <input class="form-control ms-4" list="zipOptions" id="ZIP" name="ZIP" placeholder="Sök..."
+                                value={{zip_code}}>
                             <datalist id="zipOptions">
                                 <option value="21110">
                                 <option value="21111">
