--- a/views/login.html
+++ b/views/login.html
@@ -48,7 +48,8 @@
     <main>
         <div class="container-login">
             <div class="container-lg">
-                <form action="/Logga_in" method="POST">
+                <form action="/Logga_in" method="POST" accept-charset="UTF-8">
+
                     <h1>Login</h1>
                     <div class="Input-box">
                         <input type="text" name="email" placeholder="Användarnamn" value = "{{email}}">
