--- a/views/register.html
+++ b/views/register.html
@@ -59,7 +59,7 @@
                 </div>
                 <p>Fyll i dina uppgifter nedan!</p>
                 <hr>
-                <form action="/Registrering" method="POST" class="pb-5">
+                <form action="/Registrering" method="POST" class="pb-5" accept-charset="UTF-8">
                     <label for="email" class="form-label h4">
                         Mejladress
                     </label><br>
