--- a/views/index.html
+++ b/views/index.html
@@ -58,7 +58,8 @@
                 </p>
                 <div class="collapse" id="collapseFilter">
                     <div>
-                        <form action="/filter" method="GET" class="mb-3">
+                        <form action="/filter" method="GET" class="mb-3" accept-charset="UTF-8">
+
 
 
                             <!--Categories-->
@@ -149,9 +150,6 @@
                 <div class="row">
                     <div class="col-lg-7 col-md-12">
                         <p>{{article[2]}} - {{article[1]}}</p>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione cupiditate
-                            aperiam accusantium culpa voluptatem quidem deserunt saepe et fugiat autem!
-                        </p>
                     </div>
                     <div class="col-lg-5 col-md-12 d-flex justify-content-center">
                         <div class="d-flex align-items-end mb-3 me-3">
