--- a/views/publish_post.html
+++ b/views/publish_post.html
@@ -56,7 +56,7 @@
                         om?</b><br>Fyll i nedan formulär så ser vi till att folk får reda på händelsen</p>
                 <!--Form-->
                 <!--id="myForm"-->
-                <form action="/Ny" method="POST" class="form_publish_post mt-3 p-3">
+                <form action="/Ny" method="POST" class="form_publish_post mt-3 p-3" accept-charset="UTF-8">
                     <div class="col-10 col-sm-9 col-md-5">
                         <label for="category" class="form-label ms-4 mt-3 h4">Kriskategori<span
                                 class="text-danger">*</span>
