--- a/templates/index.html
+++ b/templates/index.html
@@ -143,7 +143,7 @@
 <main class="col-12 col-md-9 pb-5">
     <div class="row">
         <h1 class="ms-4 mt-4">Händelser</h1>
-        % for article in articles:
+        {% for article in articles%}
         <div class="card mx-4 mt-3">
             <div class="card-body">
                 <h5 class="card-title">{{article[0]}}</h5>
@@ -180,7 +180,7 @@
                 Publicerad: {{article[3]}} {{article[4]}}
             </div>
         </div>
-        %end
+        {% endfor %}
     </div>
 </main>
 
