--- a/views/index.html
+++ b/views/index.html
@@ -46,12 +46,18 @@
     <!--Wrapper-->
     <div class="container-md">
         <div class="row">
-
+            <!--Aside content-->
             <aside class="col-12 col-md-3 general_light_blue">
                 <p class="inline-block gap-1 text-center align-middle mt-2">
                     <button class="col-12 icon_confirm_post hover_collapse" type="button" data-bs-toggle="collapse"
                         data-bs-target="#collapseFilter" aria-expanded="false" aria-controls="collapseExample">
-                        <p class="h3 mt-4">Filtrering</p>
+                        <p class="h3 mt-4 mb-0">Filtrering</p>
+                        <!--Icon-->
+                        <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor"
+                            class="mb-2 mt-0 bi bi-chevron-compact-down" viewBox="0 0 16 16">
+                            <path fill-rule="evenodd"
+                                d="M1.553 6.776a.5.5 0 0 1 .67-.223L8 9.44l5.776-2.888a.5.5 0 1 1 .448.894l-6 3a.5.5 0 0 1-.448 0l-6-3a.5.5 0 0 1-.223-.67" />
+                        </svg>
 
                     </button>
                     <hr>
@@ -59,7 +65,6 @@
                 <div class="collapse" id="collapseFilter">
                     <div>
                         <form action="/filter" method="GET" class="mb-3">
-
 
                             <!--Categories-->
                             <label class="d-flex justify-content-center text-center form-label" for="category">
@@ -111,8 +116,8 @@
 
                             <label class="d-flex justify-content-center text-center form-label" for="date">
                                 <input class="form-control widht-select mx-auto mt-2 mb-3" type="date" id="date"
-                                name="date">
-                                </label>
+                                    name="date">
+                            </label>
 
 
                             <h4 class="mt-2 text-center">Källa</h4>
@@ -132,75 +137,80 @@
                         </form>
                     </div>
                 </div>
-
-
-                <!--Aside content-->
             </aside>
 
             <!--Main content-->
-<!-- Main content area where articles will be dynamically displayed -->
-<main class="col-12 col-md-9 pb-5">
-    <div class="row">
-        <h1 class="ms-4 mt-4">Händelser</h1>
-        % for article in articles:
-        <div class="card mx-4 mt-3">
-            <div class="card-body">
-                <h5 class="card-title">{{article[0]}}</h5>
-                <div class="row">
-                    <div class="col-lg-7 col-md-12">
-                        <p>{{article[2]}} - {{article[1]}}</p>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione cupiditate
-                            aperiam accusantium culpa voluptatem quidem deserunt saepe et fugiat autem!
-                        </p>
-                    </div>
-                    <div class="col-lg-5 col-md-12 d-flex justify-content-center">
-                        <div class="d-flex align-items-end mb-3 me-3">
-                            <span>
-                                <button type="button" onclick="myFunction()" class="icon_confirm_post">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="45" height="45" fill="#8698B3"
-                                         class="bi bi-caret-up-fill icon_confirm_post" viewBox="0 0 16 16">
-                                        <path d="m7.247 4.86-4.796 5.481c-.566.647-.106 1.659.753 1.659h9.592a1 1 0 0 0 .753-1.659l-4.796-5.48a1 1 0 0 0-1.506 0z"/>
-                                    </svg>
-                                </button>
-                                <p class="text-center my-auto">30%</p>
-                            </span>
-                            <span>
-                                <p class="text-center my-auto">70%</p>
-                                <button type="button" onclick="myFunction()" class="icon_confirm_post">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="45" height="45" fill="#8698B3"
-                                         class="bi bi-caret-down-fill icon_confirm_post" viewBox="0 0 16 16">
-                                        <path d="M7.247 11.14 2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z"/>
-                                    </svg>
-                                </button>
-                            </span>
+            <!-- Main content area where articles will be dynamically displayed -->
+            <main class="col-12 col-md-9 pb-5">
+                <h1 class="ms-4 mt-4 d-inline-block">Händelser</h1>
+
+                % for article in articles:
+                <div class="card mx-4 mt-3">
+                    <div class="card-body">
+                        <h5 class="card-title">{{article[0]}}</h5>
+                        <div class="row">
+                            <div class="col-lg-7 col-md-12">
+                                <p>{{article[2]}} - {{article[1]}}</p>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione cupiditate
+                                    aperiam accusantium culpa voluptatem quidem deserunt saepe et fugiat autem!
+                                </p>
+                            </div>
+                            <div class="col-lg-5 col-md-12 d-flex justify-content-center">
+                                <div class="d-flex align-items-end mb-3 me-3">
+                                    <span>
+                                        <button type="button" onclick="myFunction()" class="icon_confirm_post">
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="45" height="45"
+                                                fill="#8698B3" class="bi bi-caret-up-fill icon_confirm_post"
+                                                viewBox="0 0 16 16">
+                                                <path
+                                                    d="m7.247 4.86-4.796 5.481c-.566.647-.106 1.659.753 1.659h9.592a1 1 0 0 0 .753-1.659l-4.796-5.48a1 1 0 0 0-1.506 0z" />
+                                            </svg>
+                                        </button>
+                                        <p class="text-center my-auto">30%</p>
+                                    </span>
+                                    <span>
+                                        <p class="text-center my-auto">70%</p>
+                                        <button type="button" onclick="myFunction()" class="icon_confirm_post">
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="45" height="45"
+                                                fill="#8698B3" class="bi bi-caret-down-fill icon_confirm_post"
+                                                viewBox="0 0 16 16">
+                                                <path
+                                                    d="M7.247 11.14 2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z" />
+                                            </svg>
+                                        </button>
+                                    </span>
+                                </div>
+                                <img class="img-thumbnail rounded-circle icon-post" src="https://picsum.photos/200/300"
+                                    alt="">
+                            </div>
                         </div>
-                        <img class="img-thumbnail rounded-circle icon-post" src="https://picsum.photos/200/300" alt="">
+                    </div>
+                    <div class="card-footer small text-muted">
+                        Publicerad: {{article[3]}} {{article[4]}}
                     </div>
                 </div>
-            </div>
-            <div class="card-footer small text-muted">
-                Publicerad: {{article[3]}} {{article[4]}}
+                %end
+
+            </main>
+        </div>
+    </div>
+
+
+
+    <!--Footer-->
+    <footer class="footer bg-dark p-3" data-bs-theme="dark">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-2"><span class="mb-3 mb-md-0 text-body-secondary">© 2024 KrisKlar</span></div>
+                <div class="col-10"></div>
             </div>
         </div>
-        %end
-    </div>
-</main>
+    </footer>
 
-
-            <!--Footer-->
-            <footer class="footer bg-dark p-3" data-bs-theme="dark">
-                <div class="container-fluid">
-                    <div class="row">
-                        <div class="col-2"><span class="mb-3 mb-md-0 text-body-secondary">© 2024 KrisKlar</span></div>
-                        <div class="col-10"></div>
-                    </div>
-                </div>
-            </footer>
-
-            <!--BootstrapJS-->
-            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-                integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-                crossorigin="anonymous"></script>
+    <!--BootstrapJS-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
