--- a/views/polisen_api.html
+++ b/views/polisen_api.html
@@ -9,6 +9,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="../static/stylesheet.css">
+    <script>"polis_api.js"</script>
+
 </head>
 
 <body>
@@ -111,12 +113,12 @@
                     <h4 class="mt-2 text-center">Källa</h4>
                     <!--Bootstrap checkbox, switch-->
                     <div class="form-check form-switch d-flex justify-content-center mt-3">
-                        <input class="form-check-input me-2" type="checkbox" id="switchPolice" onchange="redirectToPage1()">
+                        <input class="form-check-input me-2" type="checkbox" id="switchPolice" onchange="redirectToPage()">
                         <label class="form-check-label" for="switchPolice"> Polisen.se</label>
                     </div>
 
                     <script>
-                        function redirectToPage1() {
+                        function redirectToPage() {
                             // Hämta switchen
                             var switchPolice = document.getElementById("switchPolice");
                             
@@ -126,7 +128,6 @@
                             }
                         }
                     </script>
-
 
                     <!--Bootstrap checkbox, switch-->
                     <div class="form-check form-switch d-flex justify-content-center mt-2">
@@ -145,7 +146,6 @@
                             }
                         }
                     </script>
-
                     <div class="d-flex justify-content-center mt-4">
                         <input type="submit" class="btn btn-dark" value="Hitta händelser">
                     </div>
@@ -156,8 +156,8 @@
             <main class="col-12 col-md-9">
                 <div class="row">
                     <!--Events-->
-                    <div>
-                        <h1 class="ms-4 mt-4">Händelser: KrisKollen</h1>
+                    <div id="event-container">
+                        <h1 class="ms-4 mt-4">Händelser: Polisen.se </h1>
                         <!--Post-->
                         <div class="card mx-4">
                             <div class="card-body">
