--- a/templates/polisen_api.html
+++ b/templates/polisen_api.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="../static/stylesheet.css">
-    <script src="polis_api.js"></script>
+    <script src="polisen_api.js"></script>
 </head>
 
 <body>
@@ -120,34 +120,22 @@
                             </label>
 
                             <h4 class="mt-2 text-center">Källa</h4>
-                            <!--Bootstrap checkbox, switch-->
+                            <!--Bootstrap checkbox, switch Polisen-->
                             <div class="form-check form-switch d-flex justify-content-center mt-3">
-                                <input class="form-check-input me-2" type="checkbox" id="switchPolice"
-                                    onchange="redirectToPage()">
+                                <input class="form-check-input me-2" type="checkbox" id="switchPolice">
                                 <label class="form-check-label" for="switchPolice"> Polisen.se</label>
                             </div>
 
-                            <script>
-                                function redirectToPage() {
-                                    // Hämta switchen
-                                    var switchPolice = document.getElementById("switchPolice");
 
-                                    // Om switchen är ikryssad (checked), omdirigera användaren till den angivna sidan
-                                    if (switchPolice.checked) {
-                                        window.location.href = "polisen_api.html";
-                                    }
-                                }
-                            </script>
-
-                            <!--Bootstrap checkbox, switch-->
+                            <!--Bootstrap checkbox, switch KrisKoll-->
                             <div class="form-check form-switch d-flex justify-content-center mt-2">
                                 <input class="form-check-input me-2" type="checkbox" id="switchKrisKlar"
-                                    onchange="redirectToPage2()">
+                                    onchange="redirectToPage()">
                                 <label class="form-check-label" for="switchKrisKlar"> KrisKlar.se</label>
                             </div>
 
                             <script>
-                                function redirectToPage2() {
+                                function redirectToPage() {
                                     // Hämta switchen
                                     var switchKrisKlar = document.getElementById("switchKrisKlar");
 
@@ -167,7 +155,11 @@
 
             <!--Main content-->
             <!-- Main content area where articles will be dynamically displayed -->
+
             <main class="col-12 col-md-9 pb-5">
+
+                <p id="test"></p>
+                
                 <h1 class="ms-4 mt-4">Händelser</h1>
                 {% for article in articles %}
                 <div class="card mx-4 mt-3">
