--- a/templates/polisen_api.html
+++ b/templates/polisen_api.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="../static/stylesheet.css">
-    <script src="polisen_api.js"></script>
+    <script src="../static/polisen_api.js"></script>
 </head>
 
 <body>
@@ -157,57 +157,8 @@
             <!-- Main content area where articles will be dynamically displayed -->
 
             <main class="col-12 col-md-9 pb-5">
-                
-                <h1 class="ms-4 mt-4">Händelser</h1>
-                {% for article in articles %}
-                <div class="card mx-4 mt-3">
-                    <div class="card-body">
+                <p id="test"></p>
 
-                        <p id="test"></p>
-
-                        <h5 class="card-title">{{article[0]}}</h5>
-                        <div class="row">
-                            <div class="col-lg-7 col-md-12">
-                                <p>{{article[2]}} - {{article[1]}}</p>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione cupiditate
-                                    aperiam accusantium culpa voluptatem quidem deserunt saepe et fugiat autem!
-                                </p>
-                            </div>
-                            <div class="col-lg-5 col-md-12 d-flex justify-content-center">
-                                <div class="d-flex align-items-end mb-3 me-3">
-                                    <span>
-                                        <button type="button" onclick="myFunction()" class="icon_confirm_post">
-                                            <svg xmlns="http://www.w3.org/2000/svg" width="45" height="45"
-                                                fill="#8698B3" class="bi bi-caret-up-fill icon_confirm_post"
-                                                viewBox="0 0 16 16">
-                                                <path
-                                                    d="m7.247 4.86-4.796 5.481c-.566.647-.106 1.659.753 1.659h9.592a1 1 0 0 0 .753-1.659l-4.796-5.48a1 1 0 0 0-1.506 0z" />
-                                            </svg>
-                                        </button>
-                                        <p class="text-center my-auto">30%</p>
-                                    </span>
-                                    <span>
-                                        <p class="text-center my-auto">70%</p>
-                                        <button type="button" onclick="myFunction()" class="icon_confirm_post">
-                                            <svg xmlns="http://www.w3.org/2000/svg" width="45" height="45"
-                                                fill="#8698B3" class="bi bi-caret-down-fill icon_confirm_post"
-                                                viewBox="0 0 16 16">
-                                                <path
-                                                    d="M7.247 11.14 2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z" />
-                                            </svg>
-                                        </button>
-                                    </span>
-                                </div>
-                                <img class="img-thumbnail rounded-circle icon-post" src="https://picsum.photos/200/300"
-                                    alt="">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="card-footer small text-muted">
-                        Publicerad: {{article[3]}} {{article[4]}}
-                    </div>
-                </div>
-                {% endfor %}
             </main>
         </div>
     </div>
