--- a/templates/testapi.html
+++ b/templates/testapi.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="sv">
 
-<script src="polisen_api.js"></script>
+<script src="../static/polisen_api.js"></script>
 
 <p id="test"></p>
 
