--- a/static/stylesheet.css
+++ b/static/stylesheet.css
@@ -125,6 +125,7 @@ main {
     border-radius: 40px;
     font-size: 16px;
     padding: 20px 45px 20px 20px;
+    color: white;
 }
 
 .Input-box i {
