--- a/templates/polisen_api.html
+++ b/templates/polisen_api.html
@@ -62,7 +62,7 @@
                     </button>
                     <hr>
                 </p>
-                <div class="collapse" id="collapseFilter">
+                <div class="collapse show" id="collapseFilter">
                     <div>
                         <form action="/filter" method="GET" class="mb-3" accept-charset="UTF-8">
 
