--- a/templates/index.html
+++ b/templates/index.html
@@ -61,7 +61,7 @@
                     </button>
                     <hr>
                 </p>
-                <div class="collapse" id="collapseFilter">
+                <div class="collapse show" id="collapseFilter">
                     <div>
                         <form action="/filter" method="GET" class="mb-3" accept-charset="UTF-8">
 
