--- a/templates/publish_post.html
+++ b/templates/publish_post.html
@@ -56,7 +56,7 @@
                         om?</b><br>Fyll i nedan formulär så ser vi till att folk får reda på händelsen</p>
                 <!--Form-->
                 <!--id="myForm"-->
-                <form action="/Ny" method="POST" class="form_publish_post mt-3 p-3" accept-charset="UTF-8" id="myForm">
+                <form action="/Ny" method="POST" class="form_publish_post mt-3 p-3" accept-charset="UTF-8">
                     <div class="col-10 col-sm-9 col-md-5">
                         <label for="category" class="form-label ms-4 mt-3 h4">Kriskategori<span
                                 class="text-danger">*</span>
@@ -138,7 +138,7 @@
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
 
-    <!-- JavaScript for Pop-up Message -->
+    <!-- JavaScript for Pop-up Message - Fucks upp sparandet av någon anledning-->
     <script>
         function handleSubmit(event) {
             event.preventDefault();
