--- a/static/stylesheet.css
+++ b/static/stylesheet.css
@@ -94,11 +94,11 @@ main {
 
 .container-lg {
     width: 420px;
-    background: transparent;
+    background: white;
     border: 2px solid rgba(255, 255, 255, 2);
     backdrop-filter: blur(20px);
     box-shadow: 0 0 10px rgba(0, 0, 0, .2);
-    color: #fff;
+    color: black;
     border-radius: 10px;
     padding: 30px 40px;
 }
@@ -121,7 +121,7 @@ main {
     background: transparent;
     border: none;
     outline: none;
-    border: 2px solid rgba(255, 255, 255, 2);
+    border: 2px solid black;
     border-radius: 40px;
     font-size: 16px;
     padding: 20px 45px 20px 20px;
@@ -147,7 +147,7 @@ main {
 }
 
 .remember-forgot a {
-    color: #fff;
+    color: black;
     text-decoration: none;
 }
 
@@ -158,14 +158,14 @@ main {
 .container-lg .butn {
     width: 100%;
     height: 45px;
-    background: #fff;
+    background: black;
     border: none;
     outline: none;
     border-radius: 40px;
     box-shadow: 0 0 10px rgba(0, 0, 0, .1);
     cursor: pointer;
     font-size: 16px;
-    color: #333;
+    color: white;
     font-weight: 600;
 
 }
@@ -177,7 +177,7 @@ main {
 }
 
 .register-link p a {
-    color: #fff;
+    color: black;
     text-decoration: none;
     font-weight: 600;
 }
