--- a/templates/index.html
+++ b/templates/index.html
@@ -23,6 +23,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
                     <li class="nav-item">
+                        {% if not is_user_logged_in() %}
                         <a class="nav-link active mx-lg-5 p-md-4 mx-sm-3" aria-current="page" href="/">Hem</a>
                     </li>
                     <li class="nav-item">
@@ -34,9 +35,11 @@
                     <li class="nav-item">
                         <a class="nav-link mx-lg-5 p-md-4 mx-sm-3" href="/Kontakt">Kontakta oss</a>
                     </li>
+                        {% else %}
                     <li class="nav-item">
                         <a class="nav-link mx-lg-5 p-md-4 mx-sm-3" href="/Logga_in">Logga in/
                             <br>Registrera dig</a>
+                        {% endif %}
                     </li>
                 </ul>
             </div>
