--- a/templates/index.html
+++ b/templates/index.html
@@ -23,23 +23,22 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        {% if not is_user_logged_in() %}
                         <a class="nav-link active mx-lg-5 p-md-4 mx-sm-3" aria-current="page" href="/">Hem</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link mx-lg-5 p-md-4 mx-sm-3" href="/Krishantering">Krishantering</a>
                     </li>
+                    {% if is_logged_in != None %}
                     <li class="nav-item">
                         <a class="nav-link mx-lg-5 p-md-4 mx-sm-3" href="/Ny">Publicera inlägg</a>
                     </li>
+                    {% endif %}
                     <li class="nav-item">
                         <a class="nav-link mx-lg-5 p-md-4 mx-sm-3" href="/Kontakt">Kontakta oss</a>
                     </li>
-                        {% else %}
                     <li class="nav-item">
                         <a class="nav-link mx-lg-5 p-md-4 mx-sm-3" href="/Logga_in">Logga in/
                             <br>Registrera dig</a>
-                        {% endif %}
                     </li>
                 </ul>
             </div>
