--- a/templates/index.html
+++ b/templates/index.html
@@ -137,7 +137,7 @@
 
                                     // Om switchen är ikryssad (checked), omdirigera användaren till den angivna sidan
                                     if (switchPolice.checked) {
-                                        window.location.href = "polisen_api.html";
+                                        window.location.href = "/Händelser_från_polisen";
                                     }
                                 }
                             </script>
