--- a/templates/profile.html
+++ b/templates/profile.html
@@ -48,13 +48,6 @@
                         <a class="nav-link active mx-lg-5 p-md-4 mx-sm-3" aria-current="page" href="/Profil">Min
                             profil</a>
                     </li>
-
-                    <!--Inte inloggad användare-->
-                    {% else %}
-                    <li class="nav-item">
-                        <a class="nav-link mx-lg-5 p-md-4 mx-sm-3" href="/Logga_in">Logga in/
-                            <br>Registrera dig</a>
-                    </li>
                     {% endif %}
 
                 </ul>
@@ -62,10 +55,41 @@
         </div>
     </nav>
 
+    <!--Profile page-->
     <main class="container-md">
-        <form action="/Logga_ut" method="GET">
-            <input type="submit" class="btn btn-dark" value="Logga ut">
-        </form>
+        <div id="profilepage">
+            <h2 id="phead">Min profil</h2>
+            <label for="email" class="formhead">E-post</label>
+            <input class="form-control" type="email" id="email" name="Email">
+
+            <label for="tele" class="formhead">Telefon</label>
+            <input class="form-control" type="tele" id="telephone" name="Telefon">
+
+            <label for="postnummer" class="formhead">Postnummer</label>
+            <input class="form-control" type="text" id="zipcode" name="Postnummer">
+            <br>
+
+            <p class="profilefont">Notifikationer</p>
+            <input type="checkbox" id="epost-notis" name="epost-notis" value="1">
+            <label for="epost-notis">Jag vill få notiser på e-post när något händer i mitt område</label><br>
+                                
+            <input type="checkbox" id="sms-notis" name="sms-notis" value="1">
+            <label for="sms-notis">Jag vill få notiser på SMS när något händer i mitt område</label><br>
+            <br>
+
+            <p class="profilefont">Mina inlägg</p>
+            <ul class="profilefont">
+                <li>Skottlossning</li>
+                <li>Brand</li>
+            </ul>
+
+            <button type="button" id="savebtn">Spara</button>
+            <button type="button" id="deletebtn">Radera konto</button>
+
+            <form action="/Logga_ut" method="GET">
+                <input type="submit" class="logoutbtn" value="Logga ut">
+            </form>
+        </div>
     </main>
 
 
