Uppdaterat footer på alla templates

--- a/templates/polisen_api.html
+++ b/templates/polisen_api.html
@@ -187,16 +187,40 @@
 </body>
 
 
-<!--Footer-->
-<footer class="footer bg-dark p-3" data-bs-theme="dark">
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-2"><span class="mb-3 mb-md-0 text-body-secondary">© 2024 KrisKlar</span>
-            </div>
-            <div class="col-10"></div>
+    <!--Footer-->
+    <footer class="footer bg-dark p-3" data-bs-theme="dark">
+        <div class="container-fluid">
+            <div class="row">
+            <div class="col">
+                    <p class="fhead">Följ oss</p>
+                    <p class="ftext">Facebook</p>
+                    <p class="ftext">Instagram</p>
+                    <p class="ftext">Youtube</p>
+                </div>
+            
+                <div class="col">
+                    <p class="fhead">Juridiskt</p>
+                    <p class="ftext">Integritetspolicy</p>
+                    <p class="ftext">Cookiepolicy</p>
+                    <p class="ftext">Sekretessinställningar</p>
+                </div>
+            
+                <div class="col">
+                    <p class="fhead">Om KrisKlar</p>
+                    <p class="ftext">Om oss</p>
+                    <p class="ftext">Kontakta oss</p>
+                    <p class="ftext">Hållbarhet</p>
+                </div>
         </div>
-    </div>
-</footer>
+        
+        <hr>
+            <div class="row">
+                <div class="col-2"><span class="mb-3 mb-md-0 text-body-secondary">© 2024 KrisKlar</span></div>
+                <div class="col-10"></div>
+            </div>
+
+        </div>
+    </footer>
 
 
 <!--BootstrapJS-->
